# fastapi_dishes_endpoints

./: .dockerignore  .env_test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  env_example  pyproject.toml
app/: config.py  main.py
app/admin/: Menu.xlsx
app/api/: schemas.py
app/api/routers/: dishes_router.py  menu_router.py  submenu_router.py
app/cache/: redis.py
app/celery/: celery.py  tasks.py
app/crud/: dishes_crud.py  exceptions.py  menu_crud.py  submenu_crud.py
app/database/: crud.py  db.py  db_exceptions.py  dishes_crud.py  menu_crud.py  models.py  schemas.py  submenu_crud.py
app/repository/: dish.py  dishes_repo.py  exceptions.py  menu.py  menu_repo.py  submenu.py  submenu_repo.py
app/routers/: dishes_router.py  menu_router.py  submenu_router.py
app/schemas/: schemas.py
app/services/: dish.py  dish_service.py  menu.py  menu_service.py  submenu.py  submenu_service.py
app/tasks/: celery_task  db_utils.py  excel_utils.py
app/tests/: conftest.py  test_dish.py  test_dish_sub_in_menu.py  test_menu.py  test_submenu.py  utils.py
app/utils/: exceptions.py
restaurant /: main.py
restaurant /routers/: menu_router.py
