[tool.poetry]
name = "home_task_fastapi_1"
version = "0.1.0"
description = "restaurant API"
authors = ["Enrik_Yurievich <Enrik1992@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
SQLAlchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.26.0"
pydantic-settings = "^2.1.0"
pytest = "^7.4.4"
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
