[tool.poetry]
name = "home_task_fastapi_1"
version = "0.1.0"
description = "Menu app"
authors = ["Enrik_Yurievich <Enrik1992@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
SQLAlchemy = "^2.0.25"
uvicorn = "^0.27.0"
pydantic-settings = "^2.1.0"
pytest = "^8.0.0"
asyncpg = "^0.29.0"
pytest-dotenv = "^0.5.2"
aioredis = "^2.0.1"
psycopg2-binary = "2.9.6"
sqlalchemy-utils = "^0.41.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
